package entity.base;

public interface Cookable {
    public void cook();
    public boolean isBurnt();
}
