@startuml
class entity.container.Pan {
+ boolean verifyContent(Ingredient)
+ void cook()
}

interface entity.base.Updatable {
+ void update()
}

class entity.ingredient.Egg {
- int cookedPercentage
+ void cook()
+ boolean isBurnt()
+ String toString()
+ void setCookedPercentage(int)
+ int getCookedPercentage()
}


class entity.ingredient.Lettuce {
- boolean chopState
+ void chop()
+ boolean isChopped()
}


class entity.counter.Counter {
- String name
- Item placedContent
+ Item getPlacedContent()
+ void setPlacedContent(Item)
+ boolean isPlacedContentEmpty()
+ void interact(Player)
+ String getName()
+ void setName(String)
+ String toString()
}


abstract class entity.base.Item {
- String name
+ String getName()
+ void setName(String)
+ int hashCode()
+ boolean equals(Object)
+ String toString()
}


class entity.counter.Crate {
- String myIngredient
+ void interact(Player)
+ String getMyIngredient()
}


class entity.container.Dish {
- int dirty
+ boolean isDirty()
+ boolean verifyContent(Ingredient)
+ void setDirty(int)
+ void clean(int)
+ String toString()
+ int getDirty()
}


class entity.ingredient.Bread {
}
class entity.counter.Stove {
+ void interact(Player)
+ void update()
}

interface entity.base.Cookable {
+ void cook()
+ boolean isBurnt()
}

abstract class entity.base.Ingredient {
- boolean isEdible
+ boolean isEdible()
+ void setEdible(boolean)
}


class entity.counter.Bin {
+ void interact(Player)
}

class entity.counter.DishWasher {
+ void interact(Player)
+ void update()
}

class entity.ingredient.Meat {
- boolean chopState
- int cookedPercentage
+ int getCookedPercentage()
+ void chop()
+ boolean isChopped()
+ void cook()
+ boolean isBurnt()
+ String toString()
}


class entity.counter.ChoppingBoard {
+ void interact(Player)
}

abstract class entity.base.Container {
- ArrayList<Ingredient> content
- int maxCapacity
- int capacity
+ {abstract}boolean verifyContent(Ingredient)
+ boolean addContent(Ingredient)
+ ArrayList<Ingredient> getContent()
+ void clearContent()
+ boolean isEmpty()
+ void transferContent(Container)
+ void setContent(ArrayList<Ingredient>)
+ String toString()
+ int getMaxCapacity()
+ void setMaxCapacity(int)
+ int getCapacity()
+ void setCapacity(int)
}


interface entity.base.Choppable {
~ void chop()
~ boolean isChopped()
}



entity.base.Container <|-- entity.container.Pan
entity.base.Cookable <|.. entity.ingredient.Egg
entity.base.Ingredient <|-- entity.ingredient.Egg
entity.base.Choppable <|.. entity.ingredient.Lettuce
entity.base.Ingredient <|-- entity.ingredient.Lettuce
entity.counter.Counter <|-- entity.counter.Crate
entity.base.Container <|-- entity.container.Dish
entity.base.Ingredient <|-- entity.ingredient.Bread
entity.counter.Counter <|-- entity.counter.Stove
entity.base.Item <|-- entity.base.Ingredient
entity.counter.Counter <|-- entity.counter.Bin
entity.counter.Counter <|-- entity.counter.DishWasher
entity.base.Choppable <|.. entity.ingredient.Meat
entity.base.Cookable <|.. entity.ingredient.Meat
entity.base.Ingredient <|-- entity.ingredient.Meat
entity.counter.Counter <|-- entity.counter.ChoppingBoard
entity.base.Item <|-- entity.base.Container
@enduml